--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -38,6 +38,8 @@ Legend:
 
 	(#) Checkboxes for backend settings are again vertically ordered
 	(#) Redefine standard Bootstrap alert-link colours (b3-default3 only)
+	(#) Redefine standard Bootstrap btn text colours (b3-default3 only)
+
 
 
 -------------------
