(#) Redefine standard Bootstrap btn link colours (b3-default3 only)/2

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -38,7 +38,7 @@ Legend:
 
 	(#) Checkboxes for backend settings are again vertically ordered
 	(#) Redefine standard Bootstrap alert-link colours (b3-default3 only)
-	(#) Redefine standard Bootstrap btn text colours (b3-default3 only)
+	(#) Redefine standard Bootstrap btn link colours (b3-default3 only)
 
 
 
