--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -37,6 +37,8 @@ Legend:
 	(!) Checkboxes aligned (b3-default3 template)
 	(!) Back-end title text revised for some pages
 
+	(-) Suffix setting removed from image field
+
 	(#) Checkboxes for backend settings are again vertically ordered
 	(#) Redefine standard Bootstrap alert-link colours (b3-default3 only)
 	(#) Redefine standard Bootstrap btn link colours (b3-default3 only)
