--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -408,13 +408,13 @@ SP.FMN.HIDDEN_OPT="None"
 SP.FM.HIDDEN_OPT="None"
 SP.FMN.SEL.WIDTH_IN_SEARCH="Width"
 SP.FMN.SEL.SIZE_IN_SEARCH="Size"
-SP.FMN.EMAIL.OWN_TITLE="Custom Title"
+SP.FMN.EMAIL.OWN_TITLE="Custom Label"
 SP.FMN.EMAIL.LABEL_TITLE="Label"
 SP.FMN.EMAIL.TITLE_FIELD_WIDTH="Width"
 SP.FMN.EMAIL.TITLE_MAX_LENGTH="max. Length"
 SP.FMN.EMAIL.TITLE_FILTER="Filter"
 SP.FMN.EMAIL.BOTS_PROTECT="Bots Protection"
-SP.FMN.URL.OWN_TITLE="Custom Title"
+SP.FMN.URL.OWN_TITLE="Custom Label"
 SP.FMN.URL.LABEL_TITLE="Label"
 SP.FMN.URL.TITLE_FIELD_WIDTH="Width"
 SP.FMN.URL.TITLE_MAX_LENGTH="max. Length"
