--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -42,10 +42,11 @@ Legend:
 	(-) Suffix setting removed from image field
 
 	(#) Checkboxes for backend settings are again vertically ordered
-	(#) Redefine standard Bootstrap alert-link colours (b3-default3 only)
-	(#) Redefine standard Bootstrap btn link colours (b3-default3 only)
+	(#) Re-define standard Bootstrap alert-link colours (b3-default3 only)
+	(#) Re-define standard Bootstrap btn link colours (b3-default3 only)
 	(#) If no custom label for a URL set, but label given in the settings, it wasn't used (2nd try)
 	(#) If no custom label for an email set, but label given in the settings, it wasn't used (2nd try)
+	(#) Double row container for categories list removed (b3-default3 only)
 
 
 -------------------
