--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -30,6 +30,7 @@ Legend:
 1.3.3 ()
 -------------------
 	(+) Category dates available in XML data
+	(+) New field 'Button'
 
     (!) Bootstrap 3 updated to version 3.3.7 (local and CDN)
     (!) Font Awesome 4 updated to 4.6.3
@@ -84,7 +85,7 @@ Legend:
 1.3 (28 August 2016)
 -------------------
 	(+) Image field: original image name without extension used for alt and title tag
-	(+) Possibility to add custom fields to a category
+	(+) Possibility to add fields to a category
 	(+) Colour styles for Gallery field added
 	(+) Possibility to redirect to login page if only registered users can add entries in B3-default3 template
 	(+) Support for base fee for an entry added
