--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,11 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 
+SP.FMN.FIELD_ENTRYINPUT_BUTTONSTYLE="Bytton Style Settings"
+SP.FMN.FIELD_ENTRYINPUT_BUTTON_CSS_CLASS="Button CSS Class"
+SP.FMN.FIELD_ENTRYINPUT_ICON_CSS_CLASS="Icon CSS Class"
+SP.FMN.FIELD_ENTRYINPUT_ICON_USE="Show Icon"
+
 SP.SITE.LANGUAGE="Download the English language package for SobiPro (en-GB) and the newest language files for SobiPro applications."
 SP.SITE.LANGUAGE_DOWNLOAD="Download"
 SP.SITE.LANGUAGE_HELP="Help needed!"
@@ -25,14 +30,11 @@ SP.SITE.LANGUAGE_JOIN="Join the English Team"
 SP.SITE.LANGUAGE_LANG="English Language"
 SP.SITE.LANGUAGE_TEAM="English Team (United Kingdom)"
 SP.SITE.LANGUAGE_PACKAGE="English Language Package for SobiPro (en-GB)"
-
 SP.FM.IMG.SHOW_IN_CATEGORY="Show"
 SP.FM.IMG.FLOAT="Float"
 SP.FM.LABEL_PLACEHOLDER_ALIAS="Auto-generate from label"
 SP.EN.ENTRY_PLACEHOLDER_ALIAS="Auto-generate from name"
-
 SP.TP.TEMPLATE_MISSING="The template '%s', used for this section does not longer exist. Please select an existing one."
-
 COM_SOBIPRO="SobiPro"
 SP.AMN.EDIT="Edit"
 SP.TB.SUBCATEGORY="Sub-Category"
@@ -40,11 +42,8 @@ SP.TB.SECTION="SECTION"
 SP.FMN.ENTRY_FIELDS="Entry Fields"
 SP.FMN.CATEGORIES_FIELDS="Category Fields"
 SP.CAT.CATEGORY_CUSTOM_FIELDS="Fields"
-
 SP.FMN.CC_POPULATED_SELECT_LIST="Populated Select List"
-
 SP.REQ.MOREINFO="SobiPro is checking your system and will tell you if your server doesn't fulfill the requirements (scroll down to see the whole list). A green <span class=\"label label-success\">Success</span> means a requirement is fulfilled and an orange <span class=\"label label-warning\">Warning</span> means some features in SobiPro won't work. A red <span class=\"label label-important\">Error</span> is a stopper and needs action. If your server does not fulfill the requirements, please read through the <a href=\"https://www.sigsiu.net/sobipro/requirements\" target=\"blank\">detailed description of the requirements</a> on our site for more information."
-
 SP.SECN.CFG.GENERAL_SETTINGS="General Settings"
 SP.SECN.CFG.SETTINGS_BOOTSTRAP_DISABLED="Bootstrap 2"
 SP.SECN.CFG.SETTINGS_BOOTSTRAP3_LOAD="Bootstrap 3"
@@ -61,14 +60,10 @@ SP.NOLOAD_NO="Load"
 SP.NOLOAD_YES="Don't load"
 SP.LOAD_YES="Load"
 SP.LOAD_NO="Don't load"
-
-
 SP.FM.URL.DELETE_CLICKS="User can delete Clicks"
 SP.TB.JOOMLA_ACL="Joomla ACL"
-
 SP.SECN.DEPRECATED="These settings are deprecated and will be removed in the next major version of SobiPro!"
 SP.SECN.CFG.ENTRY_ORDER_BY_RANDOM="Random"
-
 SP.ADM_PERMISSIONS.*_*="all permissions"
 SP.ADM_PERMISSIONS.EDIT_*="edit"
 SP.ADM_PERMISSIONS.ADD_*="add"
@@ -77,8 +72,6 @@ SP.ADM_PERMISSIONS.APPROVE_*="approve"
 SP.ADM_PERMISSIONS.PUBLISH_*="publish"
 SP.ADM_PERMISSIONS.ACCESS_*="access"
 SP.ADM_PERMISSIONS.CONFIGURE_*="configure"
-
-
 SP.FM.INFORMATION="Information"
 SP.FM.INFORMATION_OUT="Output"
 SP.TP.SETTINGS="Template Settings"
