--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -53,6 +53,8 @@ Legend:
 	(#) Select list and 0 in name (Issue #1723)
 	(#) Dependant list needs to be selected on every search (Issue #1703)
 	(#) Syntax error in example data for information field (Issue #1726)
+	(#) Cleaning escaped slashes in autosuggest (Issue #1709)
+	(#) Exception for index.php in redirects URLs (Issue #1737)
 
 
 -------------------
