(#) Wrong hover colour for datepicker buttons in back-end

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -56,6 +56,7 @@ Legend:
 	(#) Cleaning escaped slashes in autosuggest (Issue #1709)
 	(#) Exception for index.php in redirects URLs (Issue #1737)
 	(#) Missing HTML element in default3 payments template (Issue #1738)
+	(#) Wrong hover colour for datepicker buttons in back-end
 
 
 -------------------
