--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -17,6 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.PAYMENT_POSITION_TOTAL="Total Amount"
+SP.PAYMENT_POSITION_AMOUNT="Amount"
 SP.FM.URL.COUNTER_WITH_LABEL2="var:[label] (var:[counter] clicks)"
 
 SP.ENTRY_REQUIRED_MESSAGE = "Fields marked with a star have to be filled in!"
