--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -35,6 +35,7 @@ Legend:
 	(+) Raw payment/discount values added to XSL nodes
 	(+) Raw payment values (values without currency) available as email placeholders
 	(+) Absolute discount support
+	(+) First common methods moved to Sobi Framework
 
     (!) Bootstrap 3 updated to version 3.3.7 (local and CDN)
     (!) Font Awesome 4 updated to 4.6.3
