(#) Missing distance for dependency list in entry form

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -66,6 +66,7 @@ Legend:
 	(#) No prices on payment screen if VAT is 0
 	(#) Discounts not calculated if VAT is 0
 	(#) Payment information is not being refreshed after user changes selected options
+	(#) Missing distance for dependency list in entry form
 
 
 -------------------
