--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -24,7 +24,7 @@ SP.IDENTIFIER_EXPECTED_DESC="Please take care of what you are selecting! Do not 
 SP.IMG_FIELD_RESIZE_NO_SIZE="You enabled the resize or crop option, but you didn't provide the width and/or height."
 SP.SELECT_FIELD_MULTIPLE_DEPENDENCY="You cannot set the search method to multiple select list while dependency option is enabled."
 SP.TP.LESS_FILE_NOT_COMPILED="Could not compile LESS file. %s"
-SP.SELECT_FIELD_NO_PARENT="Please select a valid option in the \"%s\" field."
+SP.SELECT_FIELD_NO_PARENT="Please select a valid option in the '%s' field."
 SP.DELETE_CAT_NO_ID="No categories to delete selected."
 
 SP.FIELD_FIXED_CID_MISSING="The category field in this configuration requires at least one category id."
