(#) Double select label for dependency select lists in search form

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -68,6 +68,7 @@ Legend:
 	(#) Payment information is not being refreshed after user changes selected options
 	(#) Missing distance for dependency list in entry and search forms
 	(#) Dependency error message if selecting parents is not allowed, is truncated
+	(#) Double select label for dependency select lists in search form
 
 
 -------------------
