(#) CSS cache is trying to load CSS files over URL (Issue #1745)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -69,6 +69,7 @@ Legend:
 	(#) Missing distance for dependency list in entry and search forms
 	(#) Dependency error message if selecting parents is not allowed, is truncated
 	(#) Double select label for dependency select lists in search form
+	(#) CSS cache is trying to load CSS files over URL (Issue #1745)
 
 
 -------------------
