don't save a wrong value if dependency select list is unselected

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -71,8 +71,9 @@ Legend:
 	(#) Dependency error message if selecting parents is not allowed, is truncated
 	(#) Double select label for dependency select lists in search form
 	(#) CSS cache is trying to load CSS files over URL (Issue #1745)
-	(#) Dependency Select List shows wrong option in views
-	(#) Dependency Select List shows 0 instead of parent option in views (Issue #1711)
+	(#) Dependency select list shows wrong option in views
+	(#) Dependency select list shows 0 instead of parent option in views (Issue #1711)
+	(#) Don't save a wrong value if dependency select list is unselected
 
 
 -------------------
