--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -20,6 +20,8 @@
 SP.PAYMENT_POSITION_TOTAL="Total Amount"
 SP.PAYMENT_POSITION_AMOUNT="Amount"
 SP.FM.URL.COUNTER_WITH_LABEL2="var:[label] (var:[counter] clicks)"
+SP.FMN.SEARCH_SELECT_CATEGORY="--- select category ---"
+
 
 SP.ENTRY_REQUIRED_MESSAGE = "Fields marked with a star have to be filled in!"
 SP.ALPHALIST_SELECT = "Select"
