--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,7 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
-
+SP.SEC.DEPRECATED="DEPRECATED"
 SP.FMN.FIELD_ENTRYINPUT_BUTTONSTYLE="Bytton Style Settings"
 SP.FMN.FIELD_ENTRYINPUT_BUTTON_CSS_CLASS="Button CSS Class"
 SP.FMN.FIELD_ENTRYINPUT_ICON_CSS_CLASS="Icon CSS Class"
