--- a/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -23,6 +23,7 @@ SP.ABOUT.SP_DESC="SobiPro is a Joomla! component with content construction suppo
 SP.ABOUT.DEVELOPED_AND_DESIGNED="Developed and designed by %s and %s."
 SP.ABOUT.UPDATES_PANE="Version and Updates"
 SP.ABOUT.UD.YOU_ARE_USING="You are currently using SobiPro version <strong>%s</strong>"
+SP.ABOUT.UD.YOU_ARE_USING_FW="And Sobi Framework in version <strong>%s</strong>"
 SP.ABOUT.CREDITS_PANE="Credits"
 SP.ABOUT.LICENSE_PANE="License Conditions"
 SP.ABOUT.NEWS_PANE="News - %s"
