--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,7 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 SP.SEC.DEPRECATED="DEPRECATED"
+SP.SECN.DEPRECATED2="Settings marked with 'DEPRECATED' will be removed in the next major version of SobiPro!<br/>These settings are moved to the Template Settings. If your SobiPro template does not have these settings, you need to contact your template developer and ask for an updated version."
 SP.FMN.FIELD_ENTRYINPUT_BUTTONSTYLE="Bytton Style Settings"
 SP.FMN.FIELD_ENTRYINPUT_BUTTON_CSS_CLASS="Button CSS Class"
 SP.FMN.FIELD_ENTRYINPUT_ICON_CSS_CLASS="Icon CSS Class"
