--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -16,7 +16,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
-SP.TP.CONFIG.DOCUMENTATION="You will find information on how to use these settings in the <a href="https://www.sigsiu.net/default3-template-settings">documentation</a>. Support is available for members in our <a href="https://www.sigsiu.net/support">support area</a>."
+SP.TP.CONFIG.DOCUMENTATION="You will find information on how to use these settings in the <a class="alert-link" href="https://www.sigsiu.net/default3-template-settings">documentation</a>. Support is available for members in our <a class="alert-link" href="https://www.sigsiu.net/support">support area</a>."
 SP.TP.DEFAULT="default"
 SP.TP.SETTINGS_GENERAL="General Settings"
 SP.TP.CONFIG.CSS="Template Style"
@@ -30,11 +30,21 @@ SP.TP.CONFIG.FONTSIZE="Base font size"
 SP.TP.CONFIG.FONT="Base font"
 SP.TP.CONFIG.SPECIALFONT="Font for Headings"
 SP.TP.CONFIG.FEONTSELECTION="None (Joomla! template default)"
-SP.TP.CONFIG.RSS="RSS Feeds"
 SP.TP.SETTINGS_PRINT="Printing"
 SP.TP.CONFIG.SHOWPRT="Show print button"
 SP.TP.CONFIG.GALLERY="Gallery image size"
 SP.TP.CONFIG.PRINTIMG="Print Images"
+
+SP.TP.CONFIG.RSS="RSS Feeds"
+SP.TP.CONFIG.RSS_SHOWFEEDS="Show feeds from"
+SP.TP.CONFIG.RSS_ENTRIES="entries"
+SP.TP.CONFIG.RSS_CATEGORIES="categories"
+SP.TP.CONFIG.RSS_BOTH="both"
+SP.TP.CONFIG.RSSENTRIES="Settings for entries shown in the feeds:"
+SP.TP.CONFIG.RSSCATS="Settings for categories shown in the feeds:"
+SP.TP.CONFIG.RSS_CATSLIMIT="No of categories"
+SP.TP.CONFIG.RSS_ENTRIESLIMIT="No of entries"
+SP.TP.CONFIG.RSS_INFO="These settings are valid only for the RSS template 'feeds/rss.xsl' If you rename it or add another one, you need to create the necessary JSON file manually."
 
 SP.TP.SETTINGS_ENTRY="Entry Form Settings"
 SP.TP.CONFIG.ENTRY_CSS_CLASS="Entry form class"
@@ -81,6 +91,8 @@ SP.TP.CONFIG.LST_ENTRIESINLINE="Entries per line"
 SP.TP.CONFIG.LST_ENTRIESLIMIT="Entries per page"
 SP.TP.CONFIG.LST_RECURSIVE="Entries recursive"
 SP.TP.CONFIG.LST_ORDERING="Entries ordering"
+SP.TP.CONFIG.CAT_INLINE="Categories per line"
+SP.TP.CONFIG.CAT_ORDERING="Categories ordering"
 SP.TP.CONFIG.PAGINATION="Pagination"
 SP.TP.CONFIG.PAG_AJAX="Ajax"
 SP.TP.CONFIG.PAG_STD="Standard"
