--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,8 +15,15 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
+; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.SEC.STATISTICS="Statistics"
+SP.SEC.STATISTICS_CPANEL="Control Panel Settings"
+SP.SEC.STAT_ENTRIES_IN_CPANEL="Popular/latest/un-approved entries"
+SP.SEC.STAT_CATS_IN_CPANEL="Popular/latest categories"
+
+SP.CPANEL_NEW_CATEGORIES="New Categories"
+SP.CPANEL_POPULAR_CATEGORIES="Popular Categories"
 SP.SEC.DEPRECATED="DEPRECATED"
 SP.SECN.DEPRECATED2="Settings marked with 'DEPRECATED' will be removed in the next major version of SobiPro!<br/>These settings are moved to the Template Settings. If your SobiPro template does not have these settings, you need to contact your template developer and ask for an updated version."
 SP.FMN.FIELD_ENTRYINPUT_BUTTONSTYLE="Bytton Style Settings"
