--- a/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -6,7 +6,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -15,7 +15,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
+; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
 SP.ABOUT.SP_DESC2=" The pioneer of the multi-directory feature, provides now as first component, the category fields!"
 SP.ABOUT.ABOUT_PANE="About SobiPro"
@@ -23,7 +23,7 @@ SP.ABOUT.SP_DESC="SobiPro is a Joomla! component with content construction suppo
 SP.ABOUT.DEVELOPED_AND_DESIGNED="Developed and designed by %s and %s."
 SP.ABOUT.UPDATES_PANE="Version and Updates"
 SP.ABOUT.UD.YOU_ARE_USING="You are currently using SobiPro version <strong>%s</strong>"
-SP.ABOUT.UD.YOU_ARE_USING_FW="And Sobi Framework in version <strong>%s</strong>"
+SP.ABOUT.UD.YOU_ARE_USING_FW="and Sobi Framework version <strong>%s</strong>"
 SP.ABOUT.CREDITS_PANE="Credits"
 SP.ABOUT.LICENSE_PANE="License Conditions"
 SP.ABOUT.NEWS_PANE="News - %s"
