--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -88,6 +88,7 @@ Legend:
 	(#) Width for radio buttons and checkbox groups in entry and search form too small
 	(#) JSON settings file isn't loaded when using template override
 	(#) No possibility to adjust RSS settings for categories
+	(#) Missing size and label settings in search form for checkbox groups and radio buttons
 
 
 -------------------
