small text changes

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,11 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.TB.ADD_NEW="Add"
+SP.ADD_NEW_ENTRY="Add Entry"
+SP.SEC.ADD_SITE_TITLE="Add Section"
+SP.ADD_NEW_CATEGORY="Add Category"
+
 SP.SEC.STATISTICS="Statistics"
 SP.SEC.STATISTICS_CPANEL="Control Panel Settings"
 SP.SEC.STAT_ENTRIES_IN_CPANEL="Popular/latest/un-approved entries"
@@ -225,7 +230,7 @@ SP.TB.SAM="Application Manager"
 SP.TB.TEMPLATE="Template Manager"
 SP.TB.REMOVE="Remove"
 SP.TB.LANGUAGES="Language"
-SP.TB.ADD_NEW="Add New"
+SP.TB.ADD_NEW="Add"
 SP.TB.APPLY="Apply"
 SP.TB.BACK="Back"
 SP.TB.CANCEL="Cancel"
@@ -465,7 +470,6 @@ SP.CAT.APPROVED="Approval has been granted."
 SP.CAT.UNAPPROVED="Approval has been revoked."
 SP.CAT.PUBLISHED="Category/Categories has/have been published"
 SP.CAT.UNPUBLISHED="Category/Categories has/have been unpublished"
-SP.ADD_NEW_ENTRY="Add New Entry"
 SP.AMN.ADD="Add"
 SP.CATEGORY_POSITION_CHANGED="Category position changed."
 SP.ENTRY_POSITION_CHANGED="Entry position changed."
@@ -533,7 +537,6 @@ SP.CATN.CATEGORY_LOCATION="Category Location"
 SP.CATN.CATEGORY_DATA="Category Data"
 SP.CATN.SELECT_PARENT_BUTTON="Parent Category"
 SP.CATN.EDIT_DATA="Edit Data"
-SP.ADD_NEW_CATEGORY="Add New Category"
 SP.CAT.SELECT_CATEGORY_PATH="Select Category"
 SP.CAT.ICON="Icon"
 SP.CAT.JS_SELECT_CAT_ICON="Select Icon"
@@ -639,7 +642,6 @@ SP.SEC.CFG.REDIRECTS_MSGTYPE_ERR_OPT="Error Message"
 SP.SEC.CFG.REDIRECTS_MSGTYPE_MSG_OPT="Info Message"
 SP.SEC.CFG.REDIRECTS_MSG_TYPE="Message Type"
 SP.SEC.SITE_TITLE="Control Panel"
-SP.SEC.ADD_SITE_TITLE="Add New Section"
 SP.SEC.ADD_DESC="Description"
 SP.SECTION.STATE_HEAD="State"
 SP.SECTIONS.HEADER_ID="Id"
