--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -17,12 +17,13 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.EN.ADD_TITLE="var:[section] - Add Entry"
+SP.EN.ADD_PATH_TITLE="Add Entry"
 SP.PAYMENT_POSITION_TOTAL="Total Amount"
 SP.PAYMENT_POSITION_AMOUNT="Amount"
 SP.FM.URL.COUNTER_WITH_LABEL2="var:[label] (var:[counter] clicks)"
 SP.FMN.SEARCH_SELECT_CATEGORY="--- select category ---"
 SP.FMN.SEARCH_SELECT_LIST=" --- select var:[name] ---"
-
 
 SP.ENTRY_REQUIRED_MESSAGE = "Fields marked with a star have to be filled in!"
 SP.ALPHALIST_SELECT = "Select"
@@ -159,8 +160,6 @@ SP.EN.PAYMENT_BACK_BT="Go Back and Edit"
 SP.EN.APPROVED="Entry has been approved."
 SP.EN.PUBLISHED="Entry has been published."
 SP.EN.UNPUBLISHED="Entry has been unpublished."
-SP.EN.ADD_TITLE="var:[section] - Add New Entry"
-SP.EN.ADD_PATH_TITLE="Add New Entry"
 SP.EN.IS_CHECKED_OUT="Entry '%s' is currently being edited by another user."
 SP.FD.DELETED="Field 'var:[field]' has been deleted."
 SP.FD.MAIL_EMAIL_ADDRESS="Email address"
