small design changes

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -27,7 +27,7 @@ SP.SEC.STATISTICS_CPANEL="Control Panel Settings"
 SP.SEC.STAT_ENTRIES_IN_CPANEL="Popular/latest/un-approved entries"
 SP.SEC.STAT_CATS_IN_CPANEL="Popular/latest categories"
 
-SP.CPANEL_NEW_CATEGORIES="New Categories"
+SP.CPANEL_NEW_CATEGORIES="Latest Categories"
 SP.CPANEL_POPULAR_CATEGORIES="Popular Categories"
 SP.SEC.DEPRECATED="DEPRECATED"
 SP.SECN.DEPRECATED2="Settings marked with 'DEPRECATED' will be removed in the next major version of SobiPro!<br/>These settings are moved to the Template Settings. If your SobiPro template does not have these settings, you need to contact your template developer and ask for an updated version."
@@ -51,7 +51,7 @@ SP.TP.TEMPLATE_MISSING="The template '%s', used for this section does not longer
 COM_SOBIPRO="SobiPro"
 SP.AMN.EDIT="Edit"
 SP.TB.SUBCATEGORY="Sub-Category"
-SP.TB.SECTION="SECTION"
+SP.TB.SECTION="Section"
 SP.FMN.ENTRY_FIELDS="Entry Fields"
 SP.FMN.CATEGORIES_FIELDS="Category Fields"
 SP.CAT.CATEGORY_CUSTOM_FIELDS="Fields"
@@ -262,7 +262,7 @@ SP.TB.JS_DELETE_TEMPLATE_WARN="Are you sure you want to delete this template pac
 SP.CPANEL_SYSTEM_STATUS="SobiPro System Status"
 SP.CPANEL_POPULAR_ENTRIES="Popular Entries"
 SP.CPANEL_NEW_ENTRIES="New Entries"
-SP.CPANEL_AWAITING_APPROVAL="Awaiting approval"
+SP.CPANEL_AWAITING_APPROVAL="Entries awaiting approval"
 SP.CPANEL_REPORTED_ISSUES="Issues found: %d"
 SP.CPANEL_ISSUES_TYPE="Level"
 SP.CPANEL_ISSUES_SECTION="Section"
