small design changes/2

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.TB.FIELD="Field"
+SP.TB.FIELDNEW="Add Field"
 SP.TB.ADD_NEW="Add"
 SP.ADD_NEW_ENTRY="Add Entry"
 SP.SEC.ADD_SITE_TITLE="Add Section"
