(+) History/Logging types improved, more actions logged during rejection

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,17 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.EN.REJECT_HISTORY="during rejection"
+SP.HISTORY_CHANGE_TYPE_SAVE="Edit/Update"
+SP.HISTORY_CHANGE_TYPE_REJECT="Entry rejected"
+SP.HISTORY_CHANGE_TYPE_CHANGE_STATE="State Change"
+SP.HISTORY_CHANGE_TYPE_APPROVE="Approval"
+SP.HISTORY_CHANGE_TYPE_PUBLISHED="Entry published"
+SP.HISTORY_CHANGE_TYPE_UNPUBLISHED="Entry un-published"
+SP.HISTORY_CHANGE_TYPE_APPROVED="Entry approved"
+SP.HISTORY_CHANGE_TYPE_UNAPPROVED="Entry un-approved"
+SP.HISTORY_CHANGE_TYPE_DISCARD="Changes discarded"
+
 SP.TB.FIELD="Field"
 SP.TB.FIELDNEW="Add Field"
 SP.TB.ADD_NEW="Add"
@@ -152,10 +163,6 @@ SP.HEAD_HISTORY_CHANGED_BY="Made by"
 SP.HEAD_HISTORY_NOTE="Note"
 SP.HEAD_HISTORY_SITE="Area"
 SP.HEAD_HISTORY_LOAD="Load"
-SP.HISTORY_CHANGE_TYPE_SAVE="Edit/Update"
-SP.HISTORY_CHANGE_TYPE_REJECT="Rejection"
-SP.HISTORY_CHANGE_TYPE_CHANGE_STATE="State Change"
-SP.HISTORY_CHANGE_TYPE_APPROVE="Approval"
 SP.HISTORY_CHANGE_AREA_ADM="Administrator Area"
 SP.HISTORY_CHANGE_AREA_SITE="Frontend Area"
 SP.HISTORY_LOAD="Load Version"
