--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -42,6 +42,7 @@ Legend:
 	(+) Options available in XML for radio buttons and single select list fields
 	(+) List of most popular and new categories in CPanel; by default off
 	(+) Global setting to switch off showing entries and categories in CPanel
+	(+) History/Logging types improved, more actions logged during rejection
 
     (!) Bootstrap 3 updated to version 3.3.7 (local and CDN)
     (!) Font Awesome 4 updated to 4.6.3
