--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -17,6 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.SH.PATH_TITLE="Search Parameters"
+SP.SH.PATH_TITLE_RESULT="Search Result"
 SP.EN.ADD_TITLE="var:[section] - Add Entry"
 SP.EN.ADD_PATH_TITLE="Add Entry"
 SP.PAYMENT_POSITION_TOTAL="Total Amount"
@@ -185,7 +187,6 @@ SP.SH.FIND_ENTRIES_THAT_HAVE_ALL_WORDS="All words"
 SP.SH.FIND_ENTRIES_THAT_HAVE_ANY_WORDS="Any words"
 SP.SH.FIND_ENTRIES_THAT_HAVE_EXACT_PHRASE="Exact words"
 SP.SH.TITLE="Search in var:[section]"
-SP.SH.PATH_TITLE="Search"
 SP.SH.RANGE_FROM="From: "
 SP.SH.RANGE_TO="To: "
 SP.SH.SEARCH_SELECT_RANGE_FROM="var:[name] from"
