--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -59,6 +59,7 @@ Legend:
 	(!) Option settings of radio buttons and checkbox groups fields moved to general settings
 	(!) Categories ordering and categories in line setting moved to template; deprecated message added
 	(!) Different pathway items for search parameters and search result
+	(!) Improvement of search form (b3-default3) on mobile
 
 	(-) Suffix setting removed from image field
 
