--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -28,7 +28,7 @@ SP.HISTORY_CHANGE_TYPE_APPROVED="Entry approved"
 SP.HISTORY_CHANGE_TYPE_UNAPPROVED="Entry un-approved"
 SP.HISTORY_CHANGE_TYPE_DISCARD="Changes discarded"
 
-SP.TB.FIELD="Field"
+SP.TB.FIELD="Fields"
 SP.TB.FIELDNEW="Add Field"
 SP.TB.ADD_NEW="Add"
 SP.ADD_NEW_ENTRY="Add Entry"
