--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -25,6 +25,11 @@ Legend:
  (-) - Removed
  (!) - Change
 
+-------------------
+1.3.4 ()
+-------------------
+	(+) Small layout improvement in Entries & Categories Manager
+
 
 -------------------
 1.3.3 (21 January 2017)
