--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -30,6 +30,8 @@ Legend:
 -------------------
 	(+) Small layout improvement in Entries & Categories Manager
 
+	(#) Sorting the select list in search form for input box field (Issue #1762)
+
 
 -------------------
 1.3.3 (21 January 2017)
