--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -32,6 +32,8 @@ Legend:
 
 	(#) Sorting the select list in search form for input box field (Issue #1762)
 
+	(!) Loading all fonts into the category edit screen
+
 
 -------------------
 1.3.3 (21 January 2017)
