(+) Title and description for entry and search forms adjustable

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,10 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+
+SP.FORMS="Entry & Search Form"
+SP.FORMS_TITLE="Title"
+
 SP.EN.REJECT_HISTORY="during rejection"
 SP.HISTORY_CHANGE_TYPE_SAVE="Edit/Update"
 SP.HISTORY_CHANGE_TYPE_REJECT="Entry rejected"
