--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -29,12 +29,14 @@ Legend:
 1.3.4 ()
 -------------------
 	(+) Small layout improvement in Entries & Categories Manager
+	(+) Title and description for entry and search forms adjustable
 
 	(!) Loading all fonts into the category edit screen
 
 	(#) Sorting the select list in search form for input box field (Issue #1762)
 	(#) Missing container 'spListing' added to search results
 	(#) icons.json not read from current template
+	(#) Add to meta keys for checkbox groups fields added the data also to meta description
 
 
 -------------------
